# gr

./: .clang-format  .clang-tidy  .cmake-format.py  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .setup_cmakeformat.sh  CMakeLists.txt  CONTRIBUTING.md  FindQt5.cmake  LICENSE.md  MANIFEST.in  Makefile  README  README.md  README.rst  THANKS  gks.pc.in  gr.pc.in  gr3.pc.in  grm.pc.in  makefile.mingw  makefile.vc  requirements.txt  setup.py  vsbuild.bat
.githooks/: pre-commit
.gitlab-ci/: build-arch.yml  build-binary-builder.yml  build-centos.yml  build-darwin.yml  build-debian.yml  build-emscripten.yml  build-freebsd.yml  build-ubuntu.yml  build-windows.yml  deploy.yml  package.yml  sync.yml  test-emscripten.yml  test-ubuntu.yml  test.yml  update-static-files.yml
apps/glgr/: glgr.cpp  glgr.h  glgr.pro  glgrserver.cpp  glgrserver.h  rect.cpp  rect.h  vec.cpp  vec.h
apps/moldyn/: Makefile  moldyn.c  moldyn.h  moldyn_element_information.c  moldyn_graphics.c  moldyn_graphics.h  moldyn_utilities.c
cmake/: Config.cmake.in  FindAgg.cmake  FindBZip2.cmake  FindCairo.cmake  FindExpat.cmake  FindFfmpeg.cmake  FindFontconfig.cmake  FindFreetype.cmake  FindGlfw.cmake  FindGs.cmake  FindJpeg.cmake  FindLibpng.cmake  FindOpenGL.cmake  FindPixman.cmake  FindQhull.cmake  FindTiff.cmake  FindXercesC.cmake  FindZLIB.cmake  FindZeroMQ.cmake  FindZeromq.cmake  FindZlib.cmake  Findglfw3.cmake  GenPreviewImages.cmake  GetVersionFromGit.cmake  ImportIconImages.cmake  MacOSXBundleInfo.plist.in  aarch64-linux-gnu.cmake  armhf-linux-gnu.cmake  ffmpeg_test.cxx  i686-w64-mingw32.cmake  x86_64-darwin-clang.cmake  x86_64-w64-mingw32.cmake
doc/: Makefile  codeexamples.rst  codeexamplesincludes.rst  conf.py  credits.rst  examples.rst  generateincludes.sh  gr.rst  gr3.rst  grref.doku  images  imprint.rst  index.rst  installation.rst  links.rst  make.bat  references.rst  sphinx-build  thanks.rst  tutorials.rst
doc/_templates/: navbar.html
doc/codeexamples/: ex.rst
doc/examples/: ex.rst
doc/ext/: examples.py  gr_ext.py
doc/tutorials/: docker.rst  gr3_wx.rst  index.rst  matplotlib.rst  mpl_interop.rst  using_gr.rst
examples/: anim.ipynb  anim.jl  anim.py  anim_mpl.ipynb  audio_ex.py  audio_ex3.py  bornagain-demo.py  contour.py  diff.py  dna.xyz  domain_coloring.py  double_pendulum.py  double_pendulum3.py  drawmolecule.py  ex.py  face.py  figanim.py  griddata.c  griddata.f  griddata.py  gtk_ex.py  isosurface.c  isosurface.py  isosurface_input.txt  julia.jl  kws2.py  latin1.py  mandel.jl  mandel.py  mandel_gpu.py  mandel_gr3.py  mandel_nb.py  mandel_ocl.jl  mandel_ocl.py  mandel_p.py  mandel_vec.py  mri.py  multiline.py  orbitals.py  oscilloscope.py  (+31 more)
examples/glut_ex/: Makefile  atoms.py  glut_ex.py  glut_ex.sh  scene.html
examples/gr/: double_pendulum.py  qt_ex.py  wx_ex.py
examples/grplotWidget_ex/: CMakeLists.txt  grplotWidget_ex.pro  main.cpp  main_window.cpp  main_window.h  qt.conf.win
examples/jsterm_standalone/: Makefile  gr.js  index.html
examples/matplotlib/: hist.py  image_interp.py  make_thumbnails.sh
examples/qt4_ex/: CMakeLists.txt  Makefile  main.cpp  main_window.cpp  makefile.vc  qt4_ex.pro
examples/qt5_ex/: CMakeLists.txt  Makefile  main.cpp  main_window.cpp  main_window.h  makefile.vc  qt.conf.win  qt5_ex.pro
examples/qt6_ex/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  qt6_ex.pro
glgr/: glgr.h  main.cpp  rect.h
js/: Makefile  api.js  gksdemo.c  gr3demo.c  grdemo.c  griddata.html  jsplugin.c  jsplugin.cxx  jsterm.js  library.js  marker.h  module.js  spectrum.html
lib/: Precheck  Preflight  Version  build-deps  configure-pkg-config
lib/grm/GREditor/: Bounding_object.cpp  Bounding_object.h  CMakeLists.txt  GREditor.pro  TreeWidget.cpp  main.cpp  main_window.cxx  main_window.hxx
lib/grm/qtterm/: CMakeLists.txt  README.md  grm_args_t_wrapper.h  main.cpp  main_window.cpp  main_window.h  makefile.mak  makefile.mingw  qtterm.pro  receiver_thread.cpp  tooltip.cpp  tooltip.h
lib/grm/qtterm/resources/: Info.template.plist  qtterm.icns  resources.qrc
lib/grm/qtterm/sender/: sender_barplot.c  sender_contour.c  sender_event_resize.c  sender_line.c  sender_scatter.c  sender_step.c
lib/grm/test/internal_api/: CMakeLists.txt  args_automatic_array_conversion.c  get_compatible_format.c
lib/grm/test/internal_api/datatype/: string_array_map.c
lib/grm/test/internal_api/grm/: CMakeLists.txt  args_automatic_array_conversion.c  bson_serialize_deserialize.c  escape_minus.cxx  get_compatible_format.c  id_pool.cxx  test.h
lib/grm/test/internal_api/grm/datatype/: string_array_map.c
lib/grm/test/public_api/: CMakeLists.txt  barplot.c  bson_serialize_deserialize.c  dom_render.cpp  heatmap.c  histogram.c  isosurface.c  layout.c  line_errorbar.c  merge_args.c  pie.c  plot.c  quiver.c  sender.c  size.c  subplots.c  volume.c
lib/grm/test/public_api/grm/: CMakeLists.txt  bar_errorbar.c  barplot.c  barplot.cxx  bson_serialize_deserialize.c  dom_render.cxx  heatmap.c  imshow.c  layout.c  marginalheatmap.c  panzoom.c  pie.c  polar_heatmap.cxx  polar_histogram.c  raw.c  raw_gen_graphics_export.py  receiver.c  scatter_errorbar.c  sender.c  surface.c  test_server.py  zoom.c
lib/grm/test/public_api/grm/dom_render/graphics_tree/: test_comment.cxx  test_document.cxx  test_element.cxx  test_node.cxx  test_value.cxx
lib/grm/test/public_api/grm/qt/: gr_widget.hxx  main_window.cxx  main_window.hxx  util.hxx
lib/grm/test/public_api/grm/snoop/: CMakeLists.txt  c_rand.c  c_rand.h  compare_grm_julia.sh  snoop.c  snoop.jl.patch
lib/grm/test/public_api/qt/: gr_widget.cxx
matplotlib/: backend_gr.py  gr  gr.bat
moldyn/: Makefile  makefile.vc  moldyn.c  moldyn.h  moldyn_element_information.h  moldyn_element_infos.h  moldyn_filereader.c  moldyn_glut.c  moldyn_glut_key_bindings.c  moldyn_glut_menu.c  moldyn_gr3.c  moldyn_graphics.c  moldyn_graphics.h  moldyn_utilities.c  moldyn_utilities.h  moldyn_utils.c
packaging/: _get_version.py  _service.example  create_package.sh
recipe/: Build  build.sh  md5sum.py  meta.yaml.in  meta.yaml.test
tests/: compare_test.py
(+916 files in other folders)
